# thermo-demos

./: README.md  main.py  pyproject.toml
simple-supercritical/: optimize.py  phase_diagram.py  thermo.py
