[project]
name = "thermo-demos"
version = "0.1.0"
description = "Demos of various thermodynamic systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "ruff>=0.12.12",
    "scipy-stubs>=1.16.1.1",
    "ty>=0.0.1a20",
]
